tests/ui/no_comma_after_debug.stderr
error: Expected comma after debug
 --> tests/ui/no_comma_after_debug.rs:3:34
  |
3 | #[make_dst_factory(create, debug no_std)]
  |                                  ^^^^^^
